fix: fixing button small create quizz

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ article p {
   justify-content: space-between;
   align-items: center;
   margin-top: calc(69px + 38px);
+  padding-left: 6px;
 }
 
 .user-name-quizzes {
